<resources>
    <string name="app_name">SiteApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_browse">Browse</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dnskldnsklnskl">dnskldnsklnskl</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_add">Add</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_userSettings">User Settings</string>
    <string name="pref_title_new_comment_on_your_post_notifications">New comment on your post notifications</string>
    <string name="pref_header_profileSettings">Profile Settings</string>
    <string name="pref_title_first_name">Name</string>
    <string name="pref_title_surname">Surname</string>
    <string name="pref_title_description">Description</string>
    <string name="knowhow">KnowHow</string>
    <string name="action_register">Register</string>
    <string name="the_title_of_the_post">The title of the Post</string>
    <string name="the_description_of_the_post">Description</string>
    <string name="language">Language</string>
    <string name="tag_1">Tag 1</string>
    <string name="tag_2">Tag 2</string>
    <string name="tag_3">Tag 3</string>
    <string name="tag_4">Tag 4</string>
    <string name="tag_5">Tag 5</string>
    <string name="publish">Publish</string>
    <string name="the_description_of_the_post2">The description of the Post</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit" />
    <string name="submit2">Submit</string>
    <string name="contact_form">Contact Form</string>
    <string name="topic">Topic</string>
    <string name="the_title_of_the_message">The title of the message</string>
    <string name="message">Message</string>
    <string name="the_message">The message</string>
    <string name="send">Send</string>


</resources>
